--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 wasm-bindgen = "0.2"
+thiserror = "1.0.37"
 
 [dependencies.web-sys]
 version = "0.3.4"
@@ -19,4 +20,5 @@ features = [
     'HtmlElement',
     'Node',
     'Window',
+    'CssStyleDeclaration',
 ]
