--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ features = [
     'Document',
     'Element',
     'HtmlElement',
+    'HtmlAnchorElement',
     'Node',
     'Window',
     'CssStyleDeclaration',
